# wp-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: test.yml
src/wp_shield/: __init__.py  cli.py  models.py  scan.py  settings.py
src/wp_shield/checks/: __init__.py  debug_log.py  directory_listing.py  readme_exposed.py  registration.py  security_headers.py  wp_cron.py  xmlrpc.py
src/wp_shield/core/: fingerprint.py  http.py  reporter.py  target.py  waf.py
src/wp_shield/data/: plugins_popular.txt  themes_popular.txt
src/wp_shield/detect/: _wordlists.py  config_files.py  plugins.py  themes.py  users.py  version.py
src/wp_shield/vulndb/: __init__.py  match.py  schema.sql  store.py  sync.py  sync_wpvuln.py
tests/: conftest.py
tests/unit/: test_checks_xmlrpc.py  test_detect_plugins.py  test_detect_themes.py  test_detect_version.py  test_fingerprint.py  test_models.py  test_reporter.py  test_target.py  test_vulndb_match.py  test_vulndb_store.py  test_vulndb_sync_parse.py
