[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-shield"
version = "0.1.0"
description = "WordPress security audit scanner — black-box detection of versions, plugins, themes, users, misconfigurations and known CVEs"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Martin Pfeffer", email = "martin.pfeffer@celox.io" }]
requires-python = ">=3.11"
keywords = ["wordpress", "security", "audit", "scanner", "cve", "wpscan", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

dependencies = [
    "httpx[http2]>=0.27",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "packaging>=24.0",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
]
headless = [
    "playwright>=1.45",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
wp-shield = "wp_shield.cli:app"

[project.urls]
Homepage = "https://github.com/pepperonas/wp-shield"
Issues = "https://github.com/pepperonas/wp-shield/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wp_shield = ["data/*.txt", "data/*.json", "vulndb/*.sql", "web/templates/*.html", "web/static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length — handled by formatter
    "B008",   # function call in argument default — Typer's idiomatic API
    "UP042",  # str-Enum subclasses — intentional, gives us JSON-serializable enums
    "SIM102", # nested ifs are sometimes clearer than ``and``
    "SIM103", # negated return is fine for readability
    "SIM108", # ternary vs if/else is taste
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
